# Inference

./: CMakeLists.txt
include/: trt_inference.hpp
src/: main.cpp  trt_inference.cpp
